--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
  
 <body background="images.jpg">
+  <center>
 <div class="container">
  <h3 class="btn btn-info">Realtime Filter</h3>
  <hr>
@@ -33,6 +34,7 @@
 </div>
  
 <script src="main.js"></script>
+</center>
 </body>
  
 </html>
